--- a/LoginApplication/Views/Account/Register.cshtml
+++ b/LoginApplication/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model LoginApplication.Models.RegisterViewModel
 @{
     ViewData["Title"] = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,3 +6,37 @@
 
 <h1>Register</h1>
 
+<div class="col-12">
+    <form method="post">
+        <div class="col-11">
+            <div class="col-10">
+                <label asp-for="Email" class="col-md-8">Email</label>
+            </div>
+            <div class="col-10">
+                <input type="text" asp-for="Email" class="form-control" />
+            </div>
+        </div>
+        <div class="col-11">
+            <div class="col-10">
+                <label asp-for="Password" class="col-md-8">Password</label>
+            </div>
+            <div class="col-10">
+                <input type="text" asp-for="Password" class="form-control" />
+            </div>
+        </div>
+        <div class="col-11">
+            <div class="col-10">
+                <label asp-for="ConfirmPassword" class="col-md-8">Confirm Password</label>
+            </div>
+            <div class="col-10">
+                <input type="text" asp-for="ConfirmPassword" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+           
+            <div>
+                <button type="submit">Register</button>
+            </div>
+    </form>
+
+</div>
